--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,47 +6,47 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=131
+dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 <<<<<<<Updatedupstreamdock_hsplit_2=545
-dock_hsplit_3=-780
-dock_hsplit_2=557
+dock_hsplit_3=-540
+dock_hsplit_2=676
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
-dock_filesystem_v_split_offset=0
-dock_filesystem_display_mode=0
+dock_filesystem_v_split_offset=-368
+dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/game.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/Glacial-mountains-parallax-background_vnitti/Layers/", "res://addons/dialogic/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://dialogicFile/", "res://addons/", "res://addons/dialogic/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/start_menu.tscn", "res://scenes/game.tscn", "res://scenes/global.tscn", "res://scenes/hurtbox.tscn", "res://scenes/hitbox.tscn", "res://scenes/nono.tscn", "res://scenes/player.tscn", "res://scenes/slime.tscn", "res://scenes/dialog_area.tscn", "res://scenes/coin.tscn", "res://scenes/pick.tscn", "res://scenes/game_1.tscn", "res://scenes/word/exit.tscn", "res://scenes/fly.tscn", "res://scenes/flyer.tscn", "res://scenes/game_hidden.tscn")
-current_scene="res://scenes/game.tscn"
-center_split_offset=-491
+open_scenes=PackedStringArray("res://scenes/start_menu.tscn", "res://scenes/word/exit.tscn", "res://scenes/pick.tscn", "res://scenes/dialog_area.tscn", "res://dialogicFile/dialog_manager.tscn", "res://scenes/key.tscn", "res://scenes/game.tscn", "res://scenes/game_1.tscn")
+current_scene="res://scenes/game_1.tscn"
+center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/dialog_area.gd", "res://scripts/exit.gd", "res://scripts/fly.gd", "res://scenes/flyer.gd", "res://scenes/game.gd", "res://scripts/global.gd", "res://scripts/hurtbox.gd", "res://scripts/killzone.gd", "res://scripts/nono.gd", "res://scenes/nono.gd", "res://scripts/pick.gd", "res://scripts/player.gd", "res://scripts/slime.gd", "res://scripts/start_menu.gd"]
-selected_script="res://scripts/player.gd"
+open_scripts=["res://scripts/coin.gd", "res://addons/dialogic/Core/DialogicGameHandler.gd", "res://scripts/dialog_area.gd", "res://scenes/word/exit.gd", "res://scripts/exit.gd", "res://scripts/global.gd", "res://scripts/key.gd", "res://scripts/killzone.gd", "res://scripts/pick.gd", "res://scripts/start_menu.gd", "res://addons/dialogic/Modules/Background/subsystem_backgrounds.gd"]
+selected_script="res://scripts/start_menu.gd"
 open_help=[]
-script_split_offset=446
+script_split_offset=140
 list_split_offset=0
-zoom_factor=0.849809
+zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://scenes/global.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://scenes/global.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
