--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,4 @@
-[res://scripts/coin.gd]
+[res://scenes/word/exit.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -6,100 +6,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 15,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 29,
-"scroll_position": 15.56,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/slime.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 5,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 32,
-"scroll_position": 12.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/killzone.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 6,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/game_manager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 6,
-"selection_to_column": 14,
-"selection_to_line": 6,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/nono.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 52,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
 "row": 8,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 8,
-"selection_to_column": 52,
-"selection_to_line": 8,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/flyer.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 38,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 26,
-"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -118,31 +26,39 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/exit.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 44,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scripts/global.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 5,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 5,
+"selection_to_column": 12,
+"selection_to_line": 5,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/pick.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 15,
+"selection_from_line": 8,
+"selection_to_column": 24,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
 
@@ -151,24 +67,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/dialogicManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 12,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -179,155 +81,81 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 420,
+"scroll_position": 407.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/dialogic/Modules/Background/subsystem_backgrounds.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 10,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 156,
+"scroll_position": 143.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/killzone.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/coin.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/exit.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 11,
-"selection_from_line": 0,
-"selection_to_column": 30,
-"selection_to_line": 0,
+"selection_from_column": 13,
+"selection_from_line": 12,
+"selection_to_column": 21,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
-[res://addons/dialogic/Modules/Style/subsystem_styles.gd]
+[res://scripts/key.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 33,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 33,
-"selection_to_column": 15,
-"selection_to_line": 33,
-"syntax_highlighter": "GDScript"
-}
-
-[res://addons/dialogic/Modules/Core/subsystem_input.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 60,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 65,
-"row": 117,
-"scroll_position": 103.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://addons/dialogic/Modules/Text/node_input.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 87,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://addons/dialogic/Modules/Text/settings_text.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 77,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 63,
-"scroll_position": 63.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://addons/dialogic/plugin.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 36,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 142,
-"scroll_position": 128.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/fly.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/hurtbox.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/nono.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/pick.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/game.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 7,
