--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,16 +27,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/start_menu.tscn", "res://scenes/word/exit.tscn", "res://scenes/pick.tscn", "res://scenes/dialog_area.tscn", "res://dialogicFile/dialog_manager.tscn", "res://scenes/key.tscn", "res://scenes/game.tscn", "res://scenes/game_1.tscn")
-current_scene="res://scenes/game_1.tscn"
+current_scene="res://scenes/dialog_area.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/coin.gd", "res://addons/dialogic/Core/DialogicGameHandler.gd", "res://scripts/dialog_area.gd", "res://scenes/word/exit.gd", "res://scripts/exit.gd", "res://scripts/global.gd", "res://scripts/key.gd", "res://scripts/killzone.gd", "res://scripts/pick.gd", "res://scripts/start_menu.gd", "res://addons/dialogic/Modules/Background/subsystem_backgrounds.gd"]
-selected_script="res://scripts/start_menu.gd"
+selected_script="res://scripts/dialog_area.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
