--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -67,12 +67,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 22,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 19,
+"selection_from_line": 22,
+"selection_to_column": 37,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
